--- a/src/App.scss
+++ b/src/App.scss
@@ -377,7 +377,7 @@ html, body, #root, .app, .map-container {
   stroke-width: 5;
 }
 .legend svg polyline {
-  display: none;
+ // display: none;
 }
 
 .legend.hidden {
