--- a/src/App.scss
+++ b/src/App.scss
@@ -92,6 +92,9 @@ html, body, #root, .app, .map-container {
     }
   }
 
+  &.arrow {
+    stroke-width: 1.5;
+  }
   &.left.arrow {
     transform: rotate(180deg);
   }
@@ -211,7 +214,6 @@ html, body, #root, .app, .map-container {
     position: absolute;
     right: -32px;
     top: 10px;
-    padding: 8px 8px 8px 11px;
     border: solid #fff 1px;
     border-left: none;
     border-top-right-radius: 4px;
@@ -219,17 +221,18 @@ html, body, #root, .app, .map-container {
     background: white;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
     .trigger-icon {
-     // stroke-width: 6;
-      width: 12px;
-      height: 12px;
+      width: 32px;
+      padding: 4px 8px 8px 8px;
+      height: 32px;
+      stroke-width: .5;
     }
   }
 
 
   &.closed {
     left: -$intro-panel-width;
-    .trigger {
-      padding: 8px 11px 8px 8px;
+    .trigger .trigger-icon {
+      padding: 8px 8px 4px 8px;
     }
   }
 
