mobile intro-panel trigger breakpoint padding fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -890,7 +890,7 @@ html, body, #root, .app, .map-container {
       left: -100%;
       .trigger {
         right: -32px;
-        padding: 8px 11px 8px 32px;
+        // padding: 8px 11px 8px 32px;
       }
     }
     .content-body {
