--- a/src/App.scss
+++ b/src/App.scss
@@ -62,6 +62,8 @@ $intro-panel-icon-offset: 8px;
 $standard-border-radius: 4px;
 $zoom-controls-top: 40vh;
 $intro-next-prev-height: 60px;
+$right-caret-padding: 8px 8px 4px 8px;
+$left-caret-padding: 4px 8px 8px 8px;
 
 * {
   margin: 0;
@@ -208,6 +210,9 @@ html, body, #root, .app, .map-container {
     height: 100%;
     overflow: scroll;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    // so panel appears above the mobile info-icon trigger
+    position: relative;
+    z-index: 2;
   }
 
   .trigger {
@@ -222,17 +227,21 @@ html, body, #root, .app, .map-container {
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
     .trigger-icon {
       width: 32px;
-      padding: 4px 8px 8px 8px;
+      padding: $left-caret-padding;
       height: 32px;
       stroke-width: .5;
     }
+  }
+  .mobile-trigger {
+    // for use on small screens
+    display: none;
   }
 
 
   &.closed {
     left: -$intro-panel-width;
     .trigger .trigger-icon {
-      padding: 8px 8px 4px 8px;
+      padding: $right-caret-padding;
     }
   }
 
@@ -868,6 +877,11 @@ html, body, #root, .app, .map-container {
 }
 
 @media (max-width: $mobile-breakpoint) {
+  /* MAPBOX CONTROLS */
+  .mapboxgl-ctrl-top-right, .mapboxgl-ctrl-group.custom {
+    right: $SS-boundary-padding;
+  }
+
   /* INTRO PANEL */
   .intro-panel-wrapper {
     //top: calc(#{$SS-legend-height} + #{$SS-boundary-padding});
@@ -886,7 +900,7 @@ html, body, #root, .app, .map-container {
       z-index: 4;
   }
     
-    &:not(.closed) .trigger {
+    .trigger {
       right: 0px;
       top: 4px;
       border: none;
@@ -901,9 +915,29 @@ html, body, #root, .app, .map-container {
     &.closed {
       left: -100%;
       .trigger {
-        right: -32px;
+        .right.arrow {
+          // HACK treat like it's still a left arrow - small screens use the info-icon to open
+          transform: rotate(180deg);
+          padding: $left-caret-padding;
+        }
       }
     }
+    .mobile-trigger {
+      z-index: 1;
+      display: block;
+      .trigger-icon.info-icon {
+        position: fixed;
+        left: $SS-boundary-padding;
+        top: $SS-boundary-padding;
+        stroke-width: 0;
+        width: 25px;
+        cursor: pointer;
+        * {
+          cursor: pointer;
+        }
+      }
+    }
+
     .content-body {
       position: relative;
       top: 160px;
