--- a/src/App.scss
+++ b/src/App.scss
@@ -892,6 +892,75 @@ html, body, #root, .app, .map-container {
   }
 }
 
+.export-footer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-right: 100px; // make room for side-buttons
+  padding-top: 15px;
+  padding-bottom: 50px;
+
+  .section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 25px;
+    max-width: 190px;
+
+    .element {
+      padding-bottom: 10px;
+    }
+
+    .title {
+      font-size: 23px;
+    }
+
+    .description {
+      text-align: center;
+      font-size: 15px;
+    }
+
+    .button {
+      width: 150px;
+      height: 42px;
+      padding-top: 9px;
+      background: $linkshover;
+      color: white;
+      font-size: 15px;
+      text-align: center;
+      vertical-align: middle;
+    }
+
+    .icon {
+      width: 100px;
+      height: 100px;
+      background-repeat: no-repeat;
+      background-color: white;
+      background-position: center;
+      background-size: 70%;
+    }
+
+    &.print {
+      .icon {
+        background-size: 90%;
+        background-image: url(svg/print-icon.svg);
+      }
+    }
+    &.export {
+      .icon {
+        background-image: url(svg/export-icon.svg);
+      }
+    }
+    &.share {
+      .icon {
+        background-image: url(svg/share-icon.svg);
+      }
+    }
+  }
+}
+
+/* ~~~~~~~ END FS STYLES | BEGIN MOBILE STYLES ~~~~~~~ */
+
 @media (max-width: $mobile-breakpoint) {
   /* MAPBOX CONTROLS */
   .mapboxgl-ctrl-top-right, .mapboxgl-ctrl-group.custom {
@@ -1067,6 +1136,12 @@ html, body, #root, .app, .map-container {
         }
       }
     }
+  }
+
+  .export-footer {
+    flex-direction: column;
+
+
   }
 }
 
