--- a/src/App.scss
+++ b/src/App.scss
@@ -537,6 +537,7 @@ html, body, #root, .app, .map-container {
     bottom: -200px;
     transition: bottom ease .8s;
     box-shadow: $box-shadow;
+    z-index: 5;
     &.active {
       bottom: $FS-boundary-padding;
     }
