--- a/src/App.scss
+++ b/src/App.scss
@@ -404,6 +404,9 @@ html, body, #root, .app, .map-container {
   display: inline-block;
   border-radius: 5px;
   margin-right: 8px;
+  // keeps them in line with text
+  position: relative;
+  top: 2px;
 }
 .legend i.past {
   background: $color-past;
@@ -957,7 +960,7 @@ html, body, #root, .app, .map-container {
       }
     }
     &.share {
-      // flex-basis: 184px; //TODO: tie to below vars
+      // flex-basis: 184px;
       flex-shrink: 0;
 
       .icon {
@@ -968,14 +971,15 @@ html, body, #root, .app, .map-container {
         width: 100%;
         input {
           height: 100%;
-          width: 100px; //TODO: Variable
+          width: 100px;
           font-size: 14px;
           padding: 5px;
           color: $med-gray;
           z-index: 1;
         }
         .button {
-          width: 80px; //TODO: Variable
+          width: 80px;
+          // keeps it in line with text input
           position: relative;
           top: -2px;
         }
@@ -1150,7 +1154,9 @@ html, body, #root, .app, .map-container {
       }
       &.card-count-1 .card-table .card {
         // width: 100%;
-        max-width: unset;
+        // allow a single card on mobile to take up the screen width rather than just $FS-card-width
+        // (but don't unset because we still don't want long place names to cause overflow)
+        max-width: 100vw;
       }
       &.card-count-1 .card-table,
       &.card-count-2 .card-table,
