--- a/src/App.scss
+++ b/src/App.scss
@@ -69,7 +69,7 @@ $left-caret-padding: 4px 8px 8px 8px;
   margin: 0;
   padding: 0;
   word-wrap: break-word;
-  user-select: none;
+  //user-select: none;
   cursor: default;
   font-family: sofia-pro, sans-serif;
   font-weight: 400;
@@ -251,7 +251,7 @@ html, body, #root, .app, .map-container {
     background-color: white;
     z-index: 4;
     .nav {
-      text-align: center;
+      text-align: left;
       .section-name {
         white-space: nowrap;
         cursor: pointer;
@@ -263,7 +263,8 @@ html, body, #root, .app, .map-container {
       p {
         display: inline;
         font-size: 14px;
-        padding-right: 14px;
+        padding-right: 24px;
+        user-select: text;
         &.active {
           font-weight: 700;
         }
