working with gap, uses carddock height to determine whetherr to show

--- a/src/App.scss
+++ b/src/App.scss
@@ -501,7 +501,7 @@ html, body, #root, .app, .map-container {
 /* CARD DOCK */
 
 .bottom-mask {
-  background: wheat;
+  background: white;
   position: fixed;
   top: 0;
   left: 0;
