--- a/src/App.scss
+++ b/src/App.scss
@@ -343,6 +343,7 @@ html, body, #root, .app, .map-container {
       margin: auto;
       padding-top: 16px;
       font-size: 14px;
+      user-select: none;
       p.advance-button {
         // padding: 0;
         font-weight: 700;
