--- a/src/App.scss
+++ b/src/App.scss
@@ -344,6 +344,7 @@ html, body, #root, .app, .map-container {
       margin: auto;
       padding-top: 16px;
       font-size: 14px;
+      user-select: none;
       p.advance-button {
         // padding: 0;
         font-weight: 700;
@@ -502,7 +503,7 @@ html, body, #root, .app, .map-container {
 /* CARD DOCK */
 
 .bottom-mask {
-  background: wheat;
+  background: white;
   position: fixed;
   top: 0;
   left: 0;
