Updates print layouts, adds heading and intro text to print view

--- a/src/App.scss
+++ b/src/App.scss
@@ -721,6 +721,10 @@ html, body, #root, .app, .map-container {
       box-shadow: $box-shadow;
       // box-shadow: $very-trans-black -2px -4px 10px 2px;
 
+      .print-intro {
+        display: none;
+      }
+
       .row {
         height: 100%; //?
         display: flex;
@@ -1247,16 +1251,97 @@ html, body, #root, .app, .map-container {
     .legend, .export-footer, .side-buttons, .user-hint {
       display: none;
     }
-    .row .card {
-      page-break-after: always; // Gave it this rather extreme setting to test; not working :-/
-    }
     width: 100%; 
+    height: auto;
     margin: 0; 
     float: none; 
     * {
       -webkit-print-color-adjust: exact !important; /*Chrome, Safari */
       color-adjust: exact !important;  /*Firefox*/
     }
-
- }
+    .app {
+      position: relative;
+      overflow: visible;
+      height: 100%;
+    }
+    .card-dock-mask {
+      position: relative;
+      min-width: 100%;
+      background: transparent;
+      &.active {
+        position: relative;
+        top: auto;
+        left: auto;
+        right: auto;
+        bottom: auto;
+        height: 100%;
+        min-width: 100%;
+        &.card-count-3 {
+          min-width: 100%;
+        }
+      }
+      .card-dock-container {
+        position: relative;
+        top: 220px !important; // Chrome
+        @-moz-document url-prefix() {
+          top: 120px !important; // Firefox
+        }
+        _::-webkit-full-page-media, _:future, :root .safari_only {
+          top: 120px !important; // Safari
+        }
+        display: inline;
+        height: 100%;
+        box-shadow: none !important;
+        .card-dock {
+          margin-left: auto !important;
+          margin-right: auto !important;
+          height: 100% !important;
+          width: 100% !important;
+          .card-table {
+            width: 100% !important;
+            box-shadow: none !important;
+            .print-intro {
+              display: block;
+              width: 100%;
+              padding-bottom: 1rem;
+            }
+            .user-hint {
+              display: none;
+            }
+            .card {
+              max-width: auto;
+            }
+            .row {
+              .cell.website {
+                a {
+                  word-break: break-all;
+                }
+              }
+            }
+          }
+          &.card-count-3 {
+            .row:nth-of-type(10) {
+              page-break-after: always;
+            }
+            .row:nth-of-type(17) {
+              page-break-after: always;
+            }
+          }
+          &.card-count-2 {
+            .row:nth-of-type(11) {
+              page-break-after: always;
+            }
+            .row:nth-of-type(18) {
+              page-break-after: always;
+            }
+          }
+          &.card-count-1 {
+            .row:nth-of-type(14) {
+              page-break-after: always;
+            }
+          }
+        }
+      }
+    }
+  }
 }
