--- a/src/App.scss
+++ b/src/App.scss
@@ -186,6 +186,25 @@ html, body, #root, .app, .map-container {
   }
 }
 
+/* CLICK POINT HINT */ 
+.click-point-hint {
+  background-color: $hint-background;
+  color: $hint-content;
+  padding: 15px;
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.3;
+  font-weight: 600;
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.1) 3px 3px 5px;
+  text-transform: uppercase;
+  z-index: 2;
+  position: absolute;
+  top: 45%;
+  left: 55%;
+  right: unset;
+}
+
 /* INTRO PANEL */
 .intro-panel-wrapper {
   position: fixed;
@@ -1094,14 +1113,14 @@ html, body, #root, .app, .map-container {
     width: 100%;
     max-height: 510px;
 
-   .content {
+    .content {
       padding: 32px 32px 0px 32px;
       /* padding-bottom: 60px; */
       position: absolute;
       background-color: white;
       z-index: 4;
-  }
-    
+    }
+      
     .trigger {
       right: 0px;
       top: 4px;
@@ -1147,14 +1166,14 @@ html, body, #root, .app, .map-container {
       // so text isn't obscured by controls
       padding-bottom: $intro-next-prev-height;
     }
-   
-   .content-nav .bottom-controls {
+    
+    .content-nav .bottom-controls {
       border-top: #d4d4d4 1px solid;
       margin: 0 24px;
       .next-prev {
         width: 80%;
       }
-     }
+    }
     .content .nav {
       text-align: left;
       margin-bottom: 0;
@@ -1163,6 +1182,12 @@ html, body, #root, .app, .map-container {
         display: inline-block;
       }
     } 
+  }
+
+  /* CLICK POINT HINT */
+  .click-point-hint {
+    right: 120px;
+    left: unset;
   }
 
   /* LEGEND */
