--- a/src/App.scss
+++ b/src/App.scss
@@ -188,21 +188,25 @@ html, body, #root, .app, .map-container {
 
 /* CLICK POINT HINT */ 
 .click-point-hint {
+  transform: translateY(-100);
   background-color: $hint-background;
   color: $hint-content;
   padding: 15px;
   text-align: center;
+  display: inline;
   font-size: 14px;
   line-height: 1.3;
   font-weight: 600;
   border-radius: 4px;
   box-shadow: rgba(0, 0, 0, 0.1) 3px 3px 5px;
   text-transform: uppercase;
-  z-index: 2;
+  // z-index: 2;
   position: absolute;
-  top: 45%;
-  left: 55%;
-  right: unset;
+  top: 50px; // to move the hint just below the point
+  &.dismissed {
+    opacity: 0;
+    transition: opacity ease 1s;
+  }
 }
 
 /* INTRO PANEL */
@@ -1186,8 +1190,8 @@ html, body, #root, .app, .map-container {
 
   /* CLICK POINT HINT */
   .click-point-hint {
-    right: 120px;
-    left: unset;
+    // keep hint on screen in initial mobile view
+    left: -40px;
   }
 
   /* LEGEND */
